# BFGS

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bfgs.cpp  bfgs.hpp  mpc.hpp  test.sh  test_struct_function.cpp
src/: main.cpp  test_phr.cpp  test_struct_function.cpp
src/bfgs/: CMakeLists.txt  bfgs.cpp  bfgs.hpp
src/mpc/: CMakeLists.txt  mpc.cpp  mpc.hpp
src/phr/: CMakeLists.txt  phr.cpp  phr.hpp
src/test-mpc-phr/: test_mpc_phr.cpp
